src/Grammar/SimplexParser.cpp

// Generated from src/Grammar/Simplex.g4 by ANTLR 4.13.2


#include "SimplexVisitor.h"

#include "SimplexParser.h"


using namespace antlrcpp;
using namespace sx::grammar;

using namespace antlr4;

namespace {

struct SimplexParserStaticData final {
  SimplexParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  SimplexParserStaticData(const SimplexParserStaticData&) = delete;
  SimplexParserStaticData(SimplexParserStaticData&&) = delete;
  SimplexParserStaticData& operator=(const SimplexParserStaticData&) = delete;
  SimplexParserStaticData& operator=(SimplexParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag simplexParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<SimplexParserStaticData> simplexParserStaticData = nullptr;

void simplexParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (simplexParserStaticData != nullptr) {
    return;
  }
#else
  assert(simplexParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<SimplexParserStaticData>(
    std::vector<std::string>{
      "module", "statements", "statement", "decl", "expr", "expr_void", 
      "expr_tuple", "expr_struct", "expr_array", "expr_map", "expr_func", 
      "type_expr", "type_void", "type_tuple", "type_struct", "type_array", 
      "type_map", "type_func"
    },
    std::vector<std::string>{
      "", "'('", "')'", "'['", "']'", "'{'", "'}'", "':'", "','", "'='", 
      "'=>'", "'+'", "'-'", "'*'", "'/'", "'var'", "'const'", "'def'", "'type'"
    },
    std::vector<std::string>{
      "", "L_PAREN", "R_PAREN", "L_BRACKET", "R_BRACKET", "L_BRACE", "R_BRACE", 
      "COLON", "COMMA", "ASSIGN", "ARROW", "ADD", "SUB", "MUL", "DIV", "VAR", 
      "CONST", "DEF", "TYPE", "ID", "INTEGER", "NEWLINE", "WHITESPACE"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  simplexParserStaticData = std::move(staticData);
}

}

SimplexParser::SimplexParser(TokenStream *input) : SimplexParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

SimplexParser::SimplexParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  SimplexParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *simplexParserStaticData->atn, simplexParserStaticData->decisionToDFA, simplexParserStaticData->sharedContextCache, options);
}

SimplexParser::~SimplexParser() {
  delete _interpreter;
}

const atn::ATN& SimplexParser::getATN() const {
  return *simplexParserStaticData->atn;
}

std::string SimplexParser::getGrammarFileName() const {
  return "Simplex.g4";
}

const std::vector<std::string>& SimplexParser::getRuleNames() const {
  return simplexParserStaticData->ruleNames;
}

const dfa::Vocabulary& SimplexParser::getVocabulary() const {
  return simplexParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView SimplexParser::getSerializedATN() const {
  return simplexParserStaticData->serializedATN;
}


//----------------- ModuleContext ------------------------------------------------------------------

SimplexParser::ModuleContext::ModuleContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> SimplexParser::ModuleContext::NEWLINE() {
  return getTokens(SimplexParser::NEWLINE);
}

tree::TerminalNode* SimplexParser::ModuleContext::NEWLINE(size_t i) {
  return getToken(SimplexParser::NEWLINE, i);
}

std::vector<SimplexParser::DeclContext *> SimplexParser::ModuleContext::decl() {
  return getRuleContexts<SimplexParser::DeclContext>();
}

SimplexParser::DeclContext* SimplexParser::ModuleContext::decl(size_t i) {
  return getRuleContext<SimplexParser::DeclContext>(i);
}


size_t SimplexParser::ModuleContext::getRuleIndex() const {
  return SimplexParser::RuleModule;
}


std::any SimplexParser::ModuleContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SimplexVisitor*>(visitor))
    return parserVisitor->visitModule(this);
  else
    return visitor->visitChildren(this);
}

SimplexParser::ModuleContext* SimplexParser::module() {
  ModuleContext *_localctx = _tracker.createInstance<ModuleContext>(_ctx, getState());
  enterRule(_localctx, 0, SimplexParser::RuleModule);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    setState(53);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(37);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == SimplexParser::NEWLINE) {
        setState(36);
        match(SimplexParser::NEWLINE);
      }
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(40);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == SimplexParser::NEWLINE) {
        setState(39);
        match(SimplexParser::NEWLINE);
      }
      setState(42);
      decl();
      setState(47);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx);
      while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
        if (alt == 1) {
          setState(43);
          match(SimplexParser::NEWLINE);
          setState(44);
          decl(); 
        }
        setState(49);
        _errHandler->sync(this);
        alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx);
      }
      setState(51);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == SimplexParser::NEWLINE) {
        setState(50);
        match(SimplexParser::NEWLINE);
      }
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementsContext ------------------------------------------------------------------

SimplexParser::StatementsContext::StatementsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> SimplexParser::StatementsContext::NEWLINE() {
  return getTokens(SimplexParser::NEWLINE);
}

tree::TerminalNode* SimplexParser::StatementsContext::NEWLINE(size_t i) {
  return getToken(SimplexParser::NEWLINE, i);
}

std::vector<SimplexParser::StatementContext *> SimplexParser::StatementsContext::statement() {
  return getRuleContexts<SimplexParser::StatementContext>();
}

SimplexParser::StatementContext* SimplexParser::StatementsContext::statement(size_t i) {
  return getRuleContext<SimplexParser::StatementContext>(i);
}


size_t SimplexParser::StatementsContext::getRuleIndex() const {
  return SimplexParser::RuleStatements;
}


std::any SimplexParser::StatementsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SimplexVisitor*>(visitor))
    return parserVisitor->visitStatements(this);
  else
    return visitor->visitChildren(this);
}

SimplexParser::StatementsContext* SimplexParser::statements() {
  StatementsContext *_localctx = _tracker.createInstance<StatementsContext>(_ctx, getState());
  enterRule(_localctx, 2, SimplexParser::RuleStatements);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    setState(72);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 9, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(56);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == SimplexParser::NEWLINE) {
        setState(55);
        match(SimplexParser::NEWLINE);
      }
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(59);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == SimplexParser::NEWLINE) {
        setState(58);
        match(SimplexParser::NEWLINE);
      }
      setState(61);
      statement();
      setState(66);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx);
      while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
        if (alt == 1) {
          setState(62);
          match(SimplexParser::NEWLINE);
          setState(63);
          statement(); 
        }
        setState(68);
        _errHandler->sync(this);
        alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx);
      }
      setState(70);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == SimplexParser::NEWLINE) {
        setState(69);
        match(SimplexParser::NEWLINE);
      }
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

SimplexParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SimplexParser::DeclContext* SimplexParser::StatementContext::decl() {
  return getRuleContext<SimplexParser::DeclContext>(0);
}


size_t SimplexParser::StatementContext::getRuleIndex() const {
  return SimplexParser::RuleStatement;
}


std::any SimplexParser::StatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SimplexVisitor*>(visitor))
    return parserVisitor->visitStatement(this);
  else
    return visitor->visitChildren(this);
}

SimplexParser::StatementContext* SimplexParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 4, SimplexParser::RuleStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(74);
    decl();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclContext ------------------------------------------------------------------

SimplexParser::DeclContext::DeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SimplexParser::DeclContext::ID() {
  return getToken(SimplexParser::ID, 0);
}

tree::TerminalNode* SimplexParser::DeclContext::ASSIGN() {
  return getToken(SimplexParser::ASSIGN, 0);
}

SimplexParser::ExprContext* SimplexParser::DeclContext::expr() {
  return getRuleContext<SimplexParser::ExprContext>(0);
}

tree::TerminalNode* SimplexParser::DeclContext::DEF() {
  return getToken(SimplexParser::DEF, 0);
}

tree::TerminalNode* SimplexParser::DeclContext::VAR() {
  return getToken(SimplexParser::VAR, 0);
}

tree::TerminalNode* SimplexParser::DeclContext::CONST() {
  return getToken(SimplexParser::CONST, 0);
}

tree::TerminalNode* SimplexParser::DeclContext::COLON() {
  return getToken(SimplexParser::COLON, 0);
}

SimplexParser::Type_exprContext* SimplexParser::DeclContext::type_expr() {
  return getRuleContext<SimplexParser::Type_exprContext>(0);
}


size_t SimplexParser::DeclContext::getRuleIndex() const {
  return SimplexParser::RuleDecl;
}


std::any SimplexParser::DeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SimplexVisitor*>(visitor))
    return parserVisitor->visitDecl(this);
  else
    return visitor->visitChildren(this);
}

SimplexParser::DeclContext* SimplexParser::decl() {
  DeclContext *_localctx = _tracker.createInstance<DeclContext>(_ctx, getState());
  enterRule(_localctx, 6, SimplexParser::RuleDecl);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(76);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 229376) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
    setState(77);
    match(SimplexParser::ID);
    setState(80);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == SimplexParser::COLON) {
      setState(78);
      match(SimplexParser::COLON);
      setState(79);
      type_expr();
    }
    setState(82);
    match(SimplexParser::ASSIGN);
    setState(83);
    expr(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExprContext ------------------------------------------------------------------

SimplexParser::ExprContext::ExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SimplexParser::ExprContext::L_PAREN() {
  return getToken(SimplexParser::L_PAREN, 0);
}

std::vector<SimplexParser::ExprContext *> SimplexParser::ExprContext::expr() {
  return getRuleContexts<SimplexParser::ExprContext>();
}

SimplexParser::ExprContext* SimplexParser::ExprContext::expr(size_t i) {
  return getRuleContext<SimplexParser::ExprContext>(i);
}

tree::TerminalNode* SimplexParser::ExprContext::R_PAREN() {
  return getToken(SimplexParser::R_PAREN, 0);
}

tree::TerminalNode* SimplexParser::ExprContext::ID() {
  return getToken(SimplexParser::ID, 0);
}

std::vector<tree::TerminalNode *> SimplexParser::ExprContext::COMMA() {
  return getTokens(SimplexParser::COMMA);
}

tree::TerminalNode* SimplexParser::ExprContext::COMMA(size_t i) {
  return getToken(SimplexParser::COMMA, i);
}

tree::TerminalNode* SimplexParser::ExprContext::ADD() {
  return getToken(SimplexParser::ADD, 0);
}

tree::TerminalNode* SimplexParser::ExprContext::SUB() {
  return getToken(SimplexParser::SUB, 0);
}

tree::TerminalNode* SimplexParser::ExprContext::INTEGER() {
  return getToken(SimplexParser::INTEGER, 0);
}

tree::TerminalNode* SimplexParser::ExprContext::TYPE() {
  return getToken(SimplexParser::TYPE, 0);
}

SimplexParser::Type_exprContext* SimplexParser::ExprContext::type_expr() {
  return getRuleContext<SimplexParser::Type_exprContext>(0);
}

SimplexParser::Expr_voidContext* SimplexParser::ExprContext::expr_void() {
  return getRuleContext<SimplexParser::Expr_voidContext>(0);
}

SimplexParser::Expr_tupleContext* SimplexParser::ExprContext::expr_tuple() {
  return getRuleContext<SimplexParser::Expr_tupleContext>(0);
}

SimplexParser::Expr_structContext* SimplexParser::ExprContext::expr_struct() {
  return getRuleContext<SimplexParser::Expr_structContext>(0);
}

SimplexParser::Expr_arrayContext* SimplexParser::ExprContext::expr_array() {
  return getRuleContext<SimplexParser::Expr_arrayContext>(0);
}

SimplexParser::Expr_mapContext* SimplexParser::ExprContext::expr_map() {
  return getRuleContext<SimplexParser::Expr_mapContext>(0);
}

SimplexParser::Expr_funcContext* SimplexParser::ExprContext::expr_func() {
  return getRuleContext<SimplexParser::Expr_funcContext>(0);
}

tree::TerminalNode* SimplexParser::ExprContext::MUL() {
  return getToken(SimplexParser::MUL, 0);
}

tree::TerminalNode* SimplexParser::ExprContext::DIV() {
  return getToken(SimplexParser::DIV, 0);
}


size_t SimplexParser::ExprContext::getRuleIndex() const {
  return SimplexParser::RuleExpr;
}


std::any SimplexParser::ExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SimplexVisitor*>(visitor))
    return parserVisitor->visitExpr(this);
  else
    return visitor->visitChildren(this);
}


SimplexParser::ExprContext* SimplexParser::expr() {
   return expr(0);
}

SimplexParser::ExprContext* SimplexParser::expr(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  SimplexParser::ExprContext *_localctx = _tracker.createInstance<ExprContext>(_ctx, parentState);
  SimplexParser::ExprContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 8;
  enterRecursionRule(_localctx, 8, SimplexParser::RuleExpr, precedence);

    size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(118);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 14, _ctx)) {
    case 1: {
      setState(86);
      match(SimplexParser::L_PAREN);
      setState(87);
      expr(0);
      setState(88);
      match(SimplexParser::R_PAREN);
      break;
    }

    case 2: {
      setState(90);
      match(SimplexParser::ID);
      setState(91);
      match(SimplexParser::L_PAREN);
      setState(103);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if ((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & 1841194) != 0)) {
        setState(92);
        expr(0);
        setState(97);
        _errHandler->sync(this);
        alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 11, _ctx);
        while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
          if (alt == 1) {
            setState(93);
            match(SimplexParser::COMMA);
            setState(94);
            expr(0); 
          }
          setState(99);
          _errHandler->sync(this);
          alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 11, _ctx);
        }
        setState(101);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == SimplexParser::COMMA) {
          setState(100);
          match(SimplexParser::COMMA);
        }
      }
      setState(105);
      match(SimplexParser::R_PAREN);
      break;
    }

    case 3: {
      setState(106);
      _la = _input->LA(1);
      if (!(_la == SimplexParser::ADD

      || _la == SimplexParser::SUB)) {
      _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
      setState(107);
      expr(12);
      break;
    }

    case 4: {
      setState(108);
      match(SimplexParser::ID);
      break;
    }

    case 5: {
      setState(109);
      match(SimplexParser::INTEGER);
      break;
    }

    case 6: {
      setState(110);
      match(SimplexParser::TYPE);
      setState(111);
      type_expr();
      break;
    }

    case 7: {
      setState(112);
      expr_void();
      break;
    }

    case 8: {
      setState(113);
      expr_tuple();
      break;
    }

    case 9: {
      setState(114);
      expr_struct();
      break;
    }

    case 10: {
      setState(115);
      expr_array();
      break;
    }

    case 11: {
      setState(116);
      expr_map();
      break;
    }

    case 12: {
      setState(117);
      expr_func();
      break;
    }

    default:
      break;
    }
    _ctx->stop = _input->LT(-1);
    setState(128);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 16, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        setState(126);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 15, _ctx)) {
        case 1: {
          _localctx = _tracker.createInstance<ExprContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpr);
          setState(120);

          if (!(precpred(_ctx, 11))) throw FailedPredicateException(this, "precpred(_ctx, 11)");
          setState(121);
          _la = _input->LA(1);
          if (!(_la == SimplexParser::MUL

          || _la == SimplexParser::DIV)) {
          _errHandler->recoverInline(this);
          }
          else {
            _errHandler->reportMatch(this);
            consume();
          }
          setState(122);
          expr(12);
          break;
        }

        case 2: {
          _localctx = _tracker.createInstance<ExprContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpr);
          setState(123);

          if (!(precpred(_ctx, 10))) throw FailedPredicateException(this, "precpred(_ctx, 10)");
          setState(124);
          _la = _input->LA(1);
          if (!(_la == SimplexParser::ADD

          || _la == SimplexParser::SUB)) {
          _errHandler->recoverInline(this);
          }
          else {
            _errHandler->reportMatch(this);
            consume();
          }
          setState(125);
          expr(11);
          break;
        }

        default:
          break;
        } 
      }
      setState(130);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 16, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- Expr_voidContext ------------------------------------------------------------------

SimplexParser::Expr_voidContext::Expr_voidContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SimplexParser::Expr_voidContext::L_PAREN() {
  return getToken(SimplexParser::L_PAREN, 0);
}

tree::TerminalNode* SimplexParser::Expr_voidContext::R_PAREN() {
  return getToken(SimplexParser::R_PAREN, 0);
}


size_t SimplexParser::Expr_voidContext::getRuleIndex() const {
  return SimplexParser::RuleExpr_void;
}


std::any SimplexParser::Expr_voidContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SimplexVisitor*>(visitor))
    return parserVisitor->visitExpr_void(this);
  else
    return visitor->visitChildren(this);
}

SimplexParser::Expr_voidContext* SimplexParser::expr_void() {
  Expr_voidContext *_localctx = _tracker.createInstance<Expr_voidContext>(_ctx, getState());
  enterRule(_localctx, 10, SimplexParser::RuleExpr_void);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(131);
    match(SimplexParser::L_PAREN);
    setState(132);
    match(SimplexParser::R_PAREN);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Expr_tupleContext ------------------------------------------------------------------

SimplexParser::Expr_tupleContext::Expr_tupleContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SimplexParser::Expr_tupleContext::L_PAREN() {
  return getToken(SimplexParser::L_PAREN, 0);
}

std::vector<SimplexParser::ExprContext *> SimplexParser::Expr_tupleContext::expr() {
  return getRuleContexts<SimplexParser::ExprContext>();
}

SimplexParser::ExprContext* SimplexParser::Expr_tupleContext::expr(size_t i) {
  return getRuleContext<SimplexParser::ExprContext>(i);
}

tree::TerminalNode* SimplexParser::Expr_tupleContext::R_PAREN() {
  return getToken(SimplexParser::R_PAREN, 0);
}

std::vector<tree::TerminalNode *> SimplexParser::Expr_tupleContext::COMMA() {
  return getTokens(SimplexParser::COMMA);
}

tree::TerminalNode* SimplexParser::Expr_tupleContext::COMMA(size_t i) {
  return getToken(SimplexParser::COMMA, i);
}


size_t SimplexParser::Expr_tupleContext::getRuleIndex() const {
  return SimplexParser::RuleExpr_tuple;
}


std::any SimplexParser::Expr_tupleContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SimplexVisitor*>(visitor))
    return parserVisitor->visitExpr_tuple(this);
  else
    return visitor->visitChildren(this);
}

SimplexParser::Expr_tupleContext* SimplexParser::expr_tuple() {
  Expr_tupleContext *_localctx = _tracker.createInstance<Expr_tupleContext>(_ctx, getState());
  enterRule(_localctx, 12, SimplexParser::RuleExpr_tuple);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(134);
    match(SimplexParser::L_PAREN);
    setState(135);
    expr(0);
    setState(140);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 17, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(136);
        match(SimplexParser::COMMA);
        setState(137);
        expr(0); 
      }
      setState(142);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 17, _ctx);
    }
    setState(144);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == SimplexParser::COMMA) {
      setState(143);
      match(SimplexParser::COMMA);
    }
    setState(146);
    match(SimplexParser::R_PAREN);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Expr_structContext ------------------------------------------------------------------

SimplexParser::Expr_structContext::Expr_structContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SimplexParser::Expr_structContext::L_PAREN() {
  return getToken(SimplexParser::L_PAREN, 0);
}

std::vector<tree::TerminalNode *> SimplexParser::Expr_structContext::ID() {
  return getTokens(SimplexParser::ID);
}

tree::TerminalNode* SimplexParser::Expr_structContext::ID(size_t i) {
  return getToken(SimplexParser::ID, i);
}

std::vector<tree::TerminalNode *> SimplexParser::Expr_structContext::COLON() {
  return getTokens(SimplexParser::COLON);
}

tree::TerminalNode* SimplexParser::Expr_structContext::COLON(size_t i) {
  return getToken(SimplexParser::COLON, i);
}

std::vector<SimplexParser::ExprContext *> SimplexParser::Expr_structContext::expr() {
  return getRuleContexts<SimplexParser::ExprContext>();
}

SimplexParser::ExprContext* SimplexParser::Expr_structContext::expr(size_t i) {
  return getRuleContext<SimplexParser::ExprContext>(i);
}

tree::TerminalNode* SimplexParser::Expr_structContext::R_PAREN() {
  return getToken(SimplexParser::R_PAREN, 0);
}

std::vector<tree::TerminalNode *> SimplexParser::Expr_structContext::COMMA() {
  return getTokens(SimplexParser::COMMA);
}

tree::TerminalNode* SimplexParser::Expr_structContext::COMMA(size_t i) {
  return getToken(SimplexParser::COMMA, i);
}


size_t SimplexParser::Expr_structContext::getRuleIndex() const {
  return SimplexParser::RuleExpr_struct;
}


std::any SimplexParser::Expr_structContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SimplexVisitor*>(visitor))
    return parserVisitor->visitExpr_struct(this);
  else
    return visitor->visitChildren(this);
}
